<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_song"
        android:textSize="@dimen/dialog_header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/initialTempoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/goalTempoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialTempoEditText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/bpm"
        app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
        app:layout_constraintStart_toEndOf="@+id/initialTempoEditText"
        app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/bpm"
        app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
        app:layout_constraintStart_toEndOf="@+id/goalTempoEditText"
        app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:width="150dp"
        android:gravity="right"
        android:text="@string/initial_tempo"
        app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
        app:layout_constraintEnd_toStartOf="@+id/initialTempoEditText"
        app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:width="150dp"
        android:gravity="right"
        android:text="@string/goal_tempo"
        app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
        app:layout_constraintEnd_toStartOf="@+id/goalTempoEditText"
        app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTempoEditText" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>