<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jwernikowski.pam_lab.ui.song_details.NewSectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_new_song_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        tools:context="jwernikowski.pam_lab.ui.songs.NewSongDialogFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_section"
            android:textSize="@dimen/dialog_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
            app:layout_constraintEnd_toStartOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.sectionName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> viewModel.onAddSection()}"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempos_section" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:onClick="@{() -> viewModel.onCancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/add"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintTop_toTopOf="@+id/add"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tempos_section"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:width="150dp"
                android:gravity="right"
                android:text="@string/initial_tempo"
                app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
                app:layout_constraintEnd_toStartOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

            <EditText
                android:id="@+id/initialTempoEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@={`` + viewModel.initialTempo}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bpm"
                app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
                app:layout_constraintStart_toEndOf="@+id/goalTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bpm"
                app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
                app:layout_constraintStart_toEndOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:width="150dp"
                android:gravity="right"
                android:text="@string/goal_tempo"
                app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
                app:layout_constraintEnd_toStartOf="@+id/goalTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

            <EditText
                android:id="@+id/goalTempoEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@={`` + viewModel.goalTempo}"
                app:layout_constraintEnd_toEndOf="@+id/initialTempoEditText"
                app:layout_constraintStart_toStartOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toBottomOf="@+id/initialTempoEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

