<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jwer.pam.ui.dialog.section_edit.EditSectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_input_string_length"
            android:text="@={viewModel.sectionName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tempos_section"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:width="150dp"
                android:gravity="right"
                android:text="@string/initial_tempo"
                app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
                app:layout_constraintEnd_toStartOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

            <EditText
                android:id="@+id/initialTempoEditText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={`` + viewModel.initialTempo}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/bpm"
                app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
                app:layout_constraintStart_toEndOf="@+id/goalTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/bpm"
                app:layout_constraintBottom_toBottomOf="@+id/initialTempoEditText"
                app:layout_constraintStart_toEndOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/initialTempoEditText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:width="150dp"
                android:gravity="right"
                android:text="@string/goal_tempo"
                app:layout_constraintBottom_toBottomOf="@+id/goalTempoEditText"
                app:layout_constraintEnd_toStartOf="@+id/goalTempoEditText"
                app:layout_constraintTop_toTopOf="@+id/goalTempoEditText" />

            <EditText
                android:id="@+id/goalTempoEditText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={`` + viewModel.goalTempo}"
                app:layout_constraintEnd_toEndOf="@+id/initialTempoEditText"
                app:layout_constraintStart_toStartOf="@+id/initialTempoEditText"
                app:layout_constraintTop_toBottomOf="@+id/initialTempoEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

